--- a/index-new.html
+++ b/index-new.html
@@ -23,16 +23,29 @@
     <link rel="apple-touch-icon" sizes="167x167" href="img/favicons/apple-touch-icon-167x167.png">
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon-180x180.png">
     <link rel="apple-touch-icon" sizes="1024x1024" href="img/favicons/apple-touch-icon-1024x1024.png">
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/main.min.css">
   </head>
   <body>
     <div class="wrapper">
       <header class="header"> 
-        <div class="header-inner"> <a class="header__logo" href="/"><img src="img/header/logo.svg" alt="Riwatex"></a><a class="link__btn" href="login.html" target="_self">Вход/Регистрация</a>
-          <div class="header__btn js-burgerBtn"></div>
+        <div class="header__inner"> <a class="header__logo" href="/"><img src="img/header/logo.svg" alt="Riwatex"></a>
+          <div class="header__links"><a class="header__link header__link_video" href="/">
+              <svg>
+                <use xlink:href="img/sprites/sprite.svg#play-video"></use>
+              </svg>Руководство</a><a class="header__link" href="/">Руководство пользователя</a><a class="header__link" href="/">FAQ</a></div>
+          <div class="header__profile">
+            <svg>
+              <use xlink:href="img/sprites/sprite.svg#profile"></use>
+            </svg>
+          </div>
           <div class="header__lang">
             <svg>
               <use xlink:href="img/sprites/sprite.svg#lang"></use>
+            </svg>
+          </div>
+          <div class="header__burger">
+            <svg>
+              <use xlink:href="img/sprites/sprite.svg#burger"></use>
             </svg>
           </div>
         </div>
@@ -43,7 +56,7 @@
         <!-- include ../../blocks/modules/banner/banner-->
       </main>
     </div>
-    <script src="js/vendor.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/vendor.min.js"></script>
+    <script src="js/main.min.js"></script>
   </body>
 </html>
