--- a/index-new.html
+++ b/index-new.html
@@ -29,7 +29,7 @@
     <div class="wrapper">
       <header class="header"> 
         <div class="header__inner"> <a class="header__logo" href="/"><img src="img/header/logo.svg" alt="Riwatex"></a>
-          <div class="header__links"><a class="header__link header__link_video" href="/">
+          <div class="header__links"><a class="header__link header__link--video" href="/">
               <svg>
                 <use xlink:href="img/sprites/sprite.svg#play-video"></use>
               </svg>Руководство</a><a class="header__link" href="/">Руководство пользователя</a><a class="header__link" href="/">FAQ</a></div>
@@ -55,6 +55,14 @@
         <!-- include ../../blocks/modules/banner/banner-->
         <!-- include ../../blocks/modules/banner/banner-->
       </main>
+      <footer class="footer">
+        <div class="container">
+          <div class="footer__inner"><span class="footer__copyright">© 2024 Riwatex. Все права защищены</span>
+            <div class="footer__links"><a href="#">Партнерское соглашение </a><a href="#">Политика конфиденциальности</a></div>
+            <div class="footer__social-links"><img src="img/footer/icon-1.svg" alt="icon"><img src="img/footer/icon-2.svg" alt="icon"><img src="img/footer/icon-3.svg" alt="icon"><img src="img/footer/icon-4.svg" alt="icon"><img src="img/footer/icon-5.svg" alt="icon"><img src="img/footer/icon-6.svg" alt="icon"><img src="img/footer/icon-7.svg" alt="icon"></div>
+          </div>
+        </div>
+      </footer>
     </div>
     <script src="js/vendor.min.js"></script>
     <script src="js/main.min.js"></script>
