--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="wrapper">
       <header class="header"> 
         <div class="header__inner"> <a class="header__logo" href="/"><img src="img/header/logo.svg" alt="Riwatex"></a>
-          <div class="header__links"><a class="header__link header__link_video" href="/">
+          <div class="header__links"><a class="header__link header__link--video" href="/">
               <svg>
                 <use xlink:href="img/sprites/sprite.svg#play-video"></use>
               </svg>Руководство</a><a class="header__link" href="/">Руководство пользователя</a><a class="header__link" href="/">FAQ</a></div>
@@ -52,21 +52,153 @@
       </header>
       <main class="main"> 
         <div class="intro">
-          <div class="intro__inner">
-                    <h1 class="title intro__title">Рекомендуйте трейдерам биржу <span>Riwatex</span> и увеличивайте свой доход
-                    </h1>
-            <p class="intro__text">Станьте партнером Riwatex и осознайте ценность своего влияния</p>
-                    <button class="btn-index">Стать партнером
-                      <svg>
-                        <use xlink:href="img/sprites/sprite.svg#arrow-right"></use>
-                      </svg>
-                    </button>
-            <div class="intro__phones"><img class="intro__img" src="img/intro/phones.png" alt="phones"><img class="intro__bg" src="img/intro/bg-phones.png" alt="bg-phones"></div>
+          <div class="container">
+            <div class="intro__bg-coins"><img src="img/intro/bg-coins.png" alt="bg-coins"></div>
+            <div class="intro__inner">
+              <div class="intro__content">
+                        <h1 class="title intro__title">Рекомендуйте трейдерам биржу <span>Riwatex</span> и увеличивайте свой доход
+                        </h1>
+                <p class="intro__text">Станьте партнером Riwatex и осознайте ценность своего влияния</p>
+                        <button class="btn-index intro__btn">Стать партнером
+                          <svg>
+                            <use xlink:href="img/sprites/sprite.svg#arrow-right"></use>
+                          </svg>
+                        </button>
+              </div>
+              <div class="intro__phones"><img class="intro__img" src="img/intro/phones.png" alt="phones"><img class="intro__bg" src="img/intro/bg-phones.png" alt="bg-phones"><img class="intro__bg--tablet-big" src="img/intro/bg-phones-tablet-big.png" alt="bg-phones"></div>
+            </div>
           </div>
         </div>
-        <!-- include ../../blocks/modules/banner/banner-->
-        <!-- include ../../blocks/modules/banner/banner-->
+        <div class="actions">
+          <div class="container">
+            <div class="actions__inner">
+              <div class="actions__item">
+                <div class="actions__icon"><img src="img/actions/icon-1.svg" alt="icon"></div>
+                <h4 class="actions__title">Подайте заявку</h4>
+                <p class="actions__text">Подайте заявку, чтобы стать партнером Riwatex и получать прибыль от сделок ваших рефералов.</p>
+              </div>
+              <div class="actions__item">
+                <div class="actions__icon"><img src="img/actions/icon-2.svg" alt="icon"></div>
+                <h4 class="actions__title">Дождитесь одобрения</h4>
+                <p class="actions__text">Riwatex рассмотрит вашу заявку. После одобрения вы получите уникальную реферальную ссылку, которой сможете поделиться со своей аудиторией.</p>
+              </div>
+              <div class="actions__item">
+                <div class="actions__icon"><img src="img/actions/icon-3.svg" alt="icon"></div>
+                <h4 class="actions__title">Начните продвижение</h4>
+                <p class="actions__text">Вы можете продвигать свою ссылку в статьях, в соцсетях или в любых других СМИ. За каждого одобренного активного пользователя вы будете получать пожизненную реферальную комиссию</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="advants">
+          <div class="container">
+            <div class="advants__inner">
+              <div class="advants__intro"><span class="advants__suptitle">Riwatex</span>
+                        <h1 class="title advants__title">Преимущества для партнеров
+                        </h1>
+                <p class="advants__text">Мы ищем ключевых лидеров мнений и создателей контента, которые могут воплотить нашу миссию и ценности в жизнь и продвигать нашу торговую платформу</p>
+              </div>
+              <div class="advants__items">
+                <div class="advants__item"> 
+                  <div class="advants__icon"><img src="img/advants/icon-1.svg" alt="icon"></div>
+                  <div>
+                    <h4 class="advants__min-title">Партнерство</h4>
+                    <p class="advants__text">Сотрудничайте с самой надежной в мире биржей криптовалют</p>
+                  </div>
+                </div>
+                <div class="advants__item"> 
+                  <div class="advants__icon"><img src="img/advants/icon-2.svg" alt="icon"></div>
+                  <div>
+                    <h4 class="advants__min-title">Прозрачность</h4>
+                    <p class="advants__text">Отслеживание и отчеты эффективности продвижения</p>
+                  </div>
+                </div>
+                <div class="advants__item"> 
+                  <div class="advants__icon"><img src="img/advants/icon-3.svg" alt="icon"></div>
+                  <div>
+                    <h4 class="advants__min-title">Вознаграждение</h4>
+                    <p class="advants__text">Вы можете получать оплату в выбранной вами криптовалюте</p>
+                  </div>
+                </div>
+              </div>
+              <div class="advants__img"><img src="img/advants/main-img.png" alt="advants-img"></div>
+            </div>
+          </div>
+        </div>
+        <div class="statics">
+          <div class="container">
+            <div class="statics__inner">
+                      <h1 class="title statics__title">Наша комиссия более чем в два раза выше отраслевых стандартов
+                      </h1>
+              <div class="statics__items">
+                <div class="statics__item">
+                  <h3 class="statics__number">8,000<span>+</span></h3>
+                  <p class="statics__text">Наши партнеры</p>
+                </div>
+                <div class="statics__item">
+                  <h3 class="statics__number">170<span>+ стран</span></h3>
+                  <p class="statics__text">Глобальный охват</p>
+                </div>
+                <div class="statics__item">
+                  <h3 class="statics__number">6,200<span>+ USDT</span></h3>
+                  <p class="statics__text">Выплаченные комиссионные</p>
+                </div>
+              </div>
+              <div class="statics__img"><img src="img/statics/main-img.png" alt="statics-img"></div>
+            </div>
+          </div>
+        </div>
+        <div class="earn">
+          <div class="container">
+            <div class="earn__inner">
+              <div class="earn__intro">
+                        <h1 class="title earn__title">Ваш заработок
+                        </h1>
+                <p class="earn__text">Получайте пассивный доход каждый месяц за каждого привлеченного вами трейдера</p>
+              </div>
+              <div class="earn__blocks">
+                <div class="earn__block">
+                  <h3 class="earn__percent">50%</h3>
+                  <p class="earn__min-text">торговых комиссий ваших рефералов</p>
+                </div>
+                <div class="earn__plus"><img src="img/earn/plus.svg" alt="plus"></div>
+                <div class="earn__block earn__block--blue">
+                  <h3 class="earn__percent">10%</h3>
+                  <p class="earn__min-text">заработка ваших субпартнеров</p>
+                </div>
+              </div>
+              <div class="earn__imgs">
+                <div class="earn__main-img"><img src="img/earn/main-img.png" alt="earn-img"></div>
+                <div class="earn__scheme-img"><img src="img/earn/scheme-img.png" alt="scheme-img"></div>
+                <div class="earn__scheme-img-desktop"><img src="img/earn/scheme-img-desktop.png" alt="scheme-img"></div>
+              </div>
+              <div class="earn__bg"><img src="img/earn/bg.png" alt="bg"></div>
+            </div>
+          </div>
+        </div>
+        <div class="partner">
+          <div class="container">
+            <div class="partner__inner">
+                      <h1 class="title partner__title">Станьте партнером <span>Riwatex</span>
+                      </h1>
+              <p class="partner__text">Мы рады сотрудничать с единомышленниками и творческими личностями. Станьте партнером Riwatex и присоединяйтесь к нам в распространении ценностей надежной и безопасной торговли.</p>
+                      <button class="btn-index partner__btn">Подайте заявку прямо сейчас
+                        <svg>
+                          <use xlink:href="img/sprites/sprite.svg#arrow-right"></use>
+                        </svg>
+                      </button>
+            </div>
+          </div>
+        </div>
       </main>
+      <footer class="footer">
+        <div class="container">
+          <div class="footer__inner"><span class="footer__copyright">© 2024 Riwatex. Все права защищены</span>
+            <div class="footer__links"><a href="#">Партнерское соглашение </a><a href="#">Политика конфиденциальности</a></div>
+            <div class="footer__social-links"><img src="img/footer/icon-1.svg" alt="icon"><img src="img/footer/icon-2.svg" alt="icon"><img src="img/footer/icon-3.svg" alt="icon"><img src="img/footer/icon-4.svg" alt="icon"><img src="img/footer/icon-5.svg" alt="icon"><img src="img/footer/icon-6.svg" alt="icon"><img src="img/footer/icon-7.svg" alt="icon"></div>
+          </div>
+        </div>
+      </footer>
     </div>
     <script src="js/vendor.min.js"></script>
     <script src="js/main.min.js"></script>
