--- a/index-new.html
+++ b/index-new.html
@@ -33,20 +33,93 @@
               <svg>
                 <use xlink:href="img/sprites/sprite.svg#play-video"></use>
               </svg>Руководство</a><a class="header__link" href="/">Руководство пользователя</a><a class="header__link" href="/">FAQ</a></div>
-          <div class="header__profile">
+          <div class="header__profile js-openProfile">
             <svg>
               <use xlink:href="img/sprites/sprite.svg#profile"></use>
             </svg>
           </div>
-          <div class="header__lang">
+          <div class="header__lang js-openLang">
             <svg>
               <use xlink:href="img/sprites/sprite.svg#lang"></use>
             </svg>
           </div>
-          <div class="header__burger">
+          <div class="header__burger js-burgerBtn">
             <svg>
               <use xlink:href="img/sprites/sprite.svg#burger"></use>
             </svg>
+          </div>
+        </div>
+        <div class="mobile-menu js-mobileMenu">
+          <div class="container">
+            <div class="mobile-menu__inner"><a class="mobile-menu__link" href="#">FAQ </a><a class="mobile-menu__link" href="#">Свяжитесь с нами</a>
+              <div class="mobile-menu__dropdown"><span class="js-dropdownMenu">Обзор
+                  <svg>
+                    <use xlink:href="img/sprites/sprite.svg#arrow-down-mobile-menu-dropdown"></use>
+                  </svg></span>
+                <ul>
+                  <li><a href="#">Мой профиль </a></li>
+                  <li><a href="#">Безопасность</a></li>
+                  <li><a href="#">Настройки 2FA</a></li>
+                  <li><a href="#">История входа</a></li>
+                </ul>
+              </div>
+              <button class="mobile-menu__btn">Выйти</button>
+            </div>
+          </div>
+        </div>
+        <div class="mobile-lang js-mobileLang">
+          <div class="container">
+            <div class="mobile-lang__inner">
+              <h4 class="mobile-lang__title">Выбрать язык
+                <svg class="js-closeLang">
+                  <use xlink:href="img/sprites/sprite.svg#close"></use>
+                </svg>
+              </h4>
+              <ul class="mobile-lang__items">
+                <li class="mobile-lang__item js-mobileLangItem"><span>EN</span>English</li>
+                <li class="mobile-lang__item js-mobileLangItem active"><span>RU</span>Русский</li>
+                <li class="mobile-lang__item js-mobileLangItem"><span>KZ</span>Kazakh</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="lang js-lang">
+          <div class="lang__inner">
+            <ul class="lang__items">
+              <li class="lang__item js-langItem"><span>EN</span>English</li>
+              <li class="lang__item js-langItem active"><span>RU</span>Русский</li>
+              <li class="lang__item js-langItem"><span>KZ</span>Kazakh</li>
+            </ul>
+          </div>
+        </div>
+        <div class="profile js-profile">
+          <div class="profile__inner">
+            <h4 class="profile__min-title">Обзор</h4>
+            <ul class="profile__items">
+              <li class="profile__item">
+                <svg>
+                  <use xlink:href="img/sprites/sprite.svg#profile"></use>
+                </svg><a href="#">Мой профиль</a>
+              </li>
+              <li class="profile__item">
+                <svg>
+                  <use xlink:href="img/sprites/sprite.svg#security"></use>
+                </svg><a href="#">Безопасность</a>
+              </li>
+              <li class="profile__item">
+                <svg>
+                  <use xlink:href="img/sprites/sprite.svg#key"></use>
+                </svg><a href="#">Настройка 2FA</a>
+              </li>
+              <li class="profile__item">
+                <svg>
+                  <use xlink:href="img/sprites/sprite.svg#clock"></use>
+                </svg><a href="#">История входа</a>
+              </li>
+            </ul><a class="profile__log-out" href="#">
+              <svg>
+                <use xlink:href="img/sprites/sprite.svg#log-out"></use>
+              </svg>Выйти</a>
           </div>
         </div>
       </header>
@@ -59,7 +132,36 @@
         <div class="container">
           <div class="footer__inner"><span class="footer__copyright">© 2024 Riwatex. Все права защищены</span>
             <div class="footer__links"><a href="#">Партнерское соглашение </a><a href="#">Политика конфиденциальности</a></div>
-            <div class="footer__social-links"><img src="img/footer/icon-1.svg" alt="icon"><img src="img/footer/icon-2.svg" alt="icon"><img src="img/footer/icon-3.svg" alt="icon"><img src="img/footer/icon-4.svg" alt="icon"><img src="img/footer/icon-5.svg" alt="icon"><img src="img/footer/icon-6.svg" alt="icon"><img src="img/footer/icon-7.svg" alt="icon"></div>
+            <ul class="footer__social-links">
+              <li><a class="footer__social-link" href="#">
+                  <svg>
+                    <use xlink:href="img/sprites/sprite.svg#vk"></use>
+                  </svg></a></li>
+              <li><a class="footer__social-link" href="#">
+                  <svg>
+                    <use xlink:href="img/sprites/sprite.svg#facebook"></use>
+                  </svg></a></li>
+              <li><a class="footer__social-link" href="#">
+                  <svg>
+                    <use xlink:href="img/sprites/sprite.svg#tiktok"></use>
+                  </svg></a></li>
+              <li><a class="footer__social-link" href="#">
+                  <svg>
+                    <use xlink:href="img/sprites/sprite.svg#reddit"></use>
+                  </svg></a></li>
+              <li><a class="footer__social-link" href="#">
+                  <svg>
+                    <use xlink:href="img/sprites/sprite.svg#discord"></use>
+                  </svg></a></li>
+              <li><a class="footer__social-link" href="#">
+                  <svg>
+                    <use xlink:href="img/sprites/sprite.svg#youtube"></use>
+                  </svg></a></li>
+              <li><a class="footer__social-link" href="#">
+                  <svg>
+                    <use xlink:href="img/sprites/sprite.svg#medium"></use>
+                  </svg></a></li>
+            </ul>
           </div>
         </div>
       </footer>
