--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </div>
           </div>
         </div>
-        <div class="mobile-lang mobile-lang--logout js-mobileLang">
+        <div class="mobile-lang js-mobileLang">
           <div class="container">
             <div class="mobile-lang__inner">
               <h4 class="mobile-lang__title">Выбрать язык
@@ -83,31 +83,31 @@
             </div>
           </div>
         </div>
-        <div class="profile js-profile">
-          <div class="profile__inner">
-            <h4 class="profile__min-title">Обзор</h4>
-            <ul class="profile__items">
-              <li class="profile__item">
+        <div class="header-profile js-header-profile">
+          <div class="header-profile__inner">
+            <h4 class="header-profile__min-title">Обзор</h4>
+            <ul class="header-profile__items">
+              <li class="header-profile__item">
                 <svg>
                   <use xlink:href="img/sprites/sprite.svg#profile"></use>
                 </svg><a href="#">Мой профиль</a>
               </li>
-              <li class="profile__item">
+              <li class="header-profile__item">
                 <svg>
                   <use xlink:href="img/sprites/sprite.svg#security"></use>
                 </svg><a href="#">Безопасность</a>
               </li>
-              <li class="profile__item">
+              <li class="header-profile__item">
                 <svg>
                   <use xlink:href="img/sprites/sprite.svg#key"></use>
                 </svg><a href="#">Настройка 2FA</a>
               </li>
-              <li class="profile__item">
+              <li class="header-profile__item">
                 <svg>
                   <use xlink:href="img/sprites/sprite.svg#clock"></use>
                 </svg><a href="#">История входа</a>
               </li>
-            </ul><a class="profile__log-out" href="#">
+            </ul><a class="header-profile__log-out" href="#">
               <svg>
                 <use xlink:href="img/sprites/sprite.svg#log-out"></use>
               </svg>Выйти</a>
@@ -230,10 +230,10 @@
                 </div>
               </div>
               <div class="earn__imgs">
-                <div class="earn__main-img"><img src="img/earn/main-img.png" alt="earn-img"></div>
+                <div class="earn__main-img"><img src="img/earn/main-img.svg" alt="earn-img"></div>
                 <div class="earn__scheme-img">
                   <picture>
-                    <source srcset="img/earn/scheme-img-desktop.png" media="(min-width: 768px)"><img src="img/earn/scheme-img.png" alt="scheme-img">
+                    <source srcset="img/earn/scheme-img-desktop.svg" media="(min-width: 768px)"><img src="img/earn/scheme-img.svg" alt="scheme-img">
                   </picture>
                 </div>
               </div>
