--- a/index-new.html
+++ b/index-new.html
@@ -34,9 +34,7 @@
             <svg>
               <use xlink:href="img/sprites/sprite.svg#lang"></use>
             </svg>
-          </div>
-                <button class="btn-simple header__btn-simple">Войти</button>
-                <button class="btn-green header__btn-green">Подать заявку</button>
+          </div><a class="link-btn header__link-btn-simple link-btn--simple" href="#" target="_self">Войти</a><a class="link-btn header__link-btn-green link-btn--green" href="#" target="_self">Подать заявку</a>
           <div class="header__burger js-burgerBtn">
             <svg>
               <use xlink:href="img/sprites/sprite.svg#burger"></use>
@@ -45,9 +43,7 @@
         </div>
         <div class="mobile-menu js-mobileMenu">
           <div class="container">
-            <div class="mobile-menu__inner">
-                    <button class="btn-simple mobile-menu__btn-simple">Войти</button>
-                    <button class="btn-green mobile-menu__btn-green">Подать заявку</button><a class="mobile-menu__link" href="#">FAQ </a><a class="mobile-menu__link" href="#">Свяжитесь с нами</a>
+            <div class="mobile-menu__inner"><a class="link-btn mobile-menu__link-btn-simple link-btn--simple" href="#" target="_self">Войти</a><a class="link-btn mobile-menu__link-btn-green link-btn--green" href="#" target="_self">Подать заявку</a><a class="mobile-menu__link" href="#">FAQ </a><a class="mobile-menu__link" href="#">Свяжитесь с нами</a>
             </div>
           </div>
         </div>
@@ -67,31 +63,31 @@
             </div>
           </div>
         </div>
-        <div class="profile js-profile">
-          <div class="profile__inner">
-            <h4 class="profile__min-title">Обзор</h4>
-            <ul class="profile__items">
-              <li class="profile__item">
+        <div class="header-profile js-header-profile">
+          <div class="header-profile__inner">
+            <h4 class="header-profile__min-title">Обзор</h4>
+            <ul class="header-profile__items">
+              <li class="header-profile__item">
                 <svg>
                   <use xlink:href="img/sprites/sprite.svg#profile"></use>
                 </svg><a href="#">Мой профиль</a>
               </li>
-              <li class="profile__item">
+              <li class="header-profile__item">
                 <svg>
                   <use xlink:href="img/sprites/sprite.svg#security"></use>
                 </svg><a href="#">Безопасность</a>
               </li>
-              <li class="profile__item">
+              <li class="header-profile__item">
                 <svg>
                   <use xlink:href="img/sprites/sprite.svg#key"></use>
                 </svg><a href="#">Настройка 2FA</a>
               </li>
-              <li class="profile__item">
+              <li class="header-profile__item">
                 <svg>
                   <use xlink:href="img/sprites/sprite.svg#clock"></use>
                 </svg><a href="#">История входа</a>
               </li>
-            </ul><a class="profile__log-out" href="#">
+            </ul><a class="header-profile__log-out" href="#">
               <svg>
                 <use xlink:href="img/sprites/sprite.svg#log-out"></use>
               </svg>Выйти</a>
@@ -214,10 +210,10 @@
                 </div>
               </div>
               <div class="earn__imgs">
-                <div class="earn__main-img"><img src="img/earn/main-img.png" alt="earn-img"></div>
+                <div class="earn__main-img"><img src="img/earn/main-img.svg" alt="earn-img"></div>
                 <div class="earn__scheme-img">
                   <picture>
-                    <source srcset="img/earn/scheme-img-desktop.png" media="(min-width: 768px)"><img src="img/earn/scheme-img.png" alt="scheme-img">
+                    <source srcset="img/earn/scheme-img-desktop.svg" media="(min-width: 768px)"><img src="img/earn/scheme-img.svg" alt="scheme-img">
                   </picture>
                 </div>
               </div>
