новый зеленый фон для первого блока главной

--- a/index-new.html
+++ b/index-new.html
@@ -108,7 +108,11 @@
                           </svg></a>
               </div>
             </div>
-            <div class="intro__phones"><img class="intro__img" src="img/intro/phones.png" alt="phones"><img class="intro__bg" src="img/intro/bg-phones.png" alt="bg-phones"><img class="intro__bg--tablet-big" src="img/intro/bg-phones-tablet-big.png" alt="bg-phones"></div>
+            <div class="intro__phones"><img class="intro__img" src="img/intro/phones.png" alt="Телефоны">
+              <picture class="intro__bg">
+                <source srcset="img/intro/bg-phones-tablet-big.png" media="(min-width: 1024px)"><img src="img/intro/bg-phones.png" alt="">
+              </picture>
+            </div>
           </div>
         </div>
         <div class="actions">
