--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
           </div>
         </div>
         <div class="earn">
-          <div class="container">
+          <div class="container container--relative">
             <div class="earn__inner">
               <div class="earn__intro">
                         <h1 class="title earn__title">Ваш заработок
