--- a/password-recovery.html
+++ b/password-recovery.html
@@ -142,6 +142,14 @@
                       <div class="input__error js-inputError">Неверное подтверждение</div>
                     </div>
                   </div>
+                          <div class="input__block">
+                            <label class="input__label">Код подтверждения:
+                            </label>
+                            <div class="input__wrap"> 
+                              <input class="input js-emptyCheck" type="text" placeholder="Код подтверждения">
+                              <div class="input__error js-inputError">Обязательно для заполнения</div>
+                            </div>
+                          </div>
                   <label class="input__label pass-recovery__label">Код подтверждения будет отправлен на эл. почту:</label>
                   <div class="application-verifin__email-wrapper">
                     <div class="input__block application-verifin__email-input js-verifinEmailWrapper">
